# Groundwave

./: .gitattributes  .gitignore  ARCHITECTURE.md  BUILD_WINDOWS.md  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build.yml  release.yml
assets/icon/: groundwave.rc  icon.qrc  make_icon.py
cli/: dsca_decode.cpp  dsca_encode.cpp  gw_decode.cpp  gw_encode.cpp  modem_cli.cpp  wav_io.hpp
docs/: ARCHITECTURE_MS_HIER.md  HD_RADIO_COMPARISON.md
gui/: audio_engine.cpp  audio_engine.hpp  data_bridge.cpp  data_bridge.hpp  main_window.cpp  main_window.hpp  style.hpp
gui/dialogs/: alarm_config_dialog.cpp  alarm_config_dialog.hpp  device_dialog.cpp  device_dialog.hpp  help_dialog.cpp  help_dialog.hpp  hierarchical_dialog.cpp  hierarchical_dialog.hpp  preset_dialog.cpp  preset_dialog.hpp
gui/panels/: alarm_panel.cpp  alarm_panel.hpp  info_panel.cpp  info_panel.hpp  link_budget_panel.cpp  link_budget_panel.hpp  rx_panel.cpp  rx_panel.hpp  stream_panel.cpp  stream_panel.hpp  tuning_panel.cpp  tuning_panel.hpp  tx_panel.cpp  tx_panel.hpp
gui/widgets/: channel_response_widget.cpp  channel_response_widget.hpp  constellation_widget.cpp  constellation_widget.hpp  eye_diagram_widget.cpp  eye_diagram_widget.hpp  hier_flow_widget.cpp  hier_flow_widget.hpp  meter_widget.cpp  meter_widget.hpp  pls_status_widget.cpp  pls_status_widget.hpp  scope_widget.cpp  scope_widget.hpp  spectrum_widget.cpp  spectrum_widget.hpp
include/: amc.hpp  app_state.hpp  bicm.hpp  cic.hpp  config_json.hpp  dc_blocker.hpp  fft_engine.hpp  frame.hpp  grand.hpp  hierarchical_mod.hpp  hw_audio.hpp  integer_cfo.hpp  interleaver.hpp  iq_balance.hpp  iq_converter.hpp  iq_io.hpp  ldpc.hpp  mimo.hpp  mimo_pipeline.hpp  mmse_estimator.hpp  multi_stream.hpp  nco.hpp  ofdm.hpp  opus_codec.hpp  orbgrand.hpp  papr_reducer.hpp  phase_tracker.hpp  pls.hpp  polyphase.hpp  power_ramp.hpp  reed_solomon.hpp  sample_rate_offset.hpp  sfo_resampler.hpp  side_reconstructor.hpp  simd_helpers.hpp  snr_calculator.hpp  soft_decoder.hpp  soundcard_modem.hpp  spectrum_analyzer.hpp  squelch.hpp  (+4 more)
src/: fft_engine.cpp  frame.cpp  hierarchical_mod.cpp  hw_audio.cpp  interleaver.cpp  iq_converter.cpp  ldpc.cpp  mmse_estimator.cpp  ofdm.cpp  opus_codec.cpp  orbgrand.cpp  papr_reducer.cpp  pls.cpp  reed_solomon.cpp  side_reconstructor.cpp  soundcard_modem.cpp  spectrum_analyzer.cpp  symbol_mapper.cpp
tests/: benchmark_waterfall.cpp  codec_test.cpp  computed_params_test.cpp  cp_window_test.cpp  dred_test.cpp  dsp_primitives_test.cpp  fec_test.cpp  frame_test.cpp  fuzz_test.cpp  gui_test.cpp  gui_walker.cpp  hierarchical_test.cpp  integration_test.cpp  labeling_test.cpp  ldpc_encoder_test.cpp  ldpc_protograph_test.cpp  loopback_test.cpp  modem_test.cpp  ofdm_chain_test.cpp  passband_loopback_test.cpp  pls_test.cpp  reed_solomon_test.cpp  rs_chain_test.cpp  sfo_test.cpp  side_reconstructor_test.cpp
tools/: cfo_demo.cpp  exit_chart.cpp  scorecard.cpp
vcpkg-overlay/: README.md
vcpkg-overlay/opus/: portfile.cmake  vcpkg.json
